More cleanup of CompilationUnitScope